--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculadora",
   "version": "0.1.0",
   "private": true,
-  "homepage": "JMEspinoza22.github.io/CalculadoraOnline",
+  "homepage": "/CalculadoraOnline",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
